# unitool

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.py
src/tests/data/: test_cvat.py
src/tests/math/: test_geometry.py
src/tests/system/: test_file.py
src/universe/: iteration.py  plo.py  random.py  utils.py
src/universe/data/: augmentation.py  cvat.py  pandas_tools.py
src/universe/math/: geometry.py
src/universe/visualization/: annotations.py  img_tools.py
test_data/data/cvat/: annotations.xml  boxes.pkl  polylines.pkl
tests/data/: test_cvat.py
tests/math/: test_geometry.py
tests/system/: test_file.py
universe/: random.py  utils.py
universe/data/: cvat.py  pandas_tools.py
universe/math/: geometry.py
universe/system/: file.py
universe/visualization/: annotations.py  jupyter.py
